# novabeat-ai-core

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/novabeat_ai_core/: __init__.py  audiocraft_engine.py  cli.py  local_pipeline.py  model.py  supabase_store.py  tokenizer.py
supabase/: README.md
supabase/migrations/: 0001_generations.sql
tests/: test_audiocraft_engine.py  test_local_pipeline.py  test_model.py  test_no_merge_markers.py  test_supabase_store.py  test_tokenizer.py
