[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novabeat-ai-core"
version = "0.2.0"
description = "Core de IA para generación de música con integración de Meta AudioCraft"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "NovaBeat"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]
audiocraft = [
  "audiocraft>=1.3.0",
  "torch>=2.2.0",
  "torchaudio>=2.2.0"
]

[project.scripts]
novabeat-generate = "novabeat_ai_core.cli:generate_main"

[tool.pytest.ini_options]
pythonpath = ["src"]
